# blarai-public

./: .blarai-governed-core  .env.example  .gitattributes  .gitignore  AGENTS.md  AI Risk Assessment and Mitigation Strategy.md  BUILD_JOURNAL.md  CLAUDE.md  COMMERCIAL-LICENSE.md  Critical Design Review — Red Team Assessment.md  FIELD_NOTES.md  LESSONS.md  LICENSE.md  PERFORMANCE_LOG.md  Phase_2_Test_Plan.md  README.md  SECURITY.md  Use Cases_FINAL.md  coder.html  conftest.py  demo.html  just_a_pythonFile.py  launch_blarai.bat  pyproject.toml  pytest_m54_gate.txt  requirements.2026.1.0.lock.txt  requirements.2026.2.1.hashed.lock.txt  requirements.2026.2.1.lock.txt  soak_log.txt
.github/: copilot-instructions.md
.platform/: vikunja_project_ids.yaml
docs/: BUILD_JOURNAL_ANTHOLOGY.md  DECISION_REGISTER.md  (+125 more)
services/assistant_orchestrator/: Dockerfile  pyproject.toml
services/assistant_orchestrator/config/: default.toml  guest_runtime.toml
services/assistant_orchestrator/src/: __init__.py  circuit_breaker.py  constants.py  context_manager.py  egress_envelope.py  entrypoint.py  gpu_inference.py  knowledge_bank.py  pgov.py  preference_block.py  proposal_staging.py  reembed_substrate.py  substrate.py  tools.py
services/assistant_orchestrator/src/websearch/: __init__.py  adapter.py  dispatch.py  live_adapter.py  loop.py  probe.py  prompts.py  state.py  types.py
services/assistant_orchestrator/tests/: __init__.py  conftest.py  test_benchmark_helpers.py  test_benchmark_ovms_helpers.py  test_circuit_breaker.py  test_constants_ao.py  test_context_manager.py  test_coordinator_draft.py  test_coordinator_heartbeat_properties.py  test_dispatch_asset_generation.py  test_egress_envelope.py  test_embedding_device_offload.py  test_embedding_identity_stamp.py  test_entrypoint.py  test_entrypoint_context_wiring.py  test_entrypoint_document_wiring.py  test_entrypoint_error_sanitize.py  test_entrypoint_images_flag.py  test_entrypoint_session_reaper.py  test_entrypoint_signal_handlers.py  test_execute_handler.py  test_fleet_dir_resolution.py  test_generated_images.py  test_get_knowledge_image.py  test_gpu_inference.py  test_image_gen_wiring.py  test_image_management_handlers.py  test_image_resolve_handler.py  test_ingest_submit_images.py  test_knowledge_bank.py  test_knowledge_bank_images.py  test_knowledge_bank_preferences.py  test_knowledge_bank_wiring.py  test_pgov.py  test_pgov_boundaries.py  test_pgov_embed_documents.py  test_pgov_leakage_wiring.py  test_pgov_stage5_embed_reuse.py  test_plan_handler.py  test_preference_block.py  (+19 more)
services/assistant_orchestrator/tests/websearch/: __init__.py  test_w2_adapter.py  test_w3_loop.py  test_w4_live_adapter.py  test_w5_datamark.py  test_websearch_command_grounding.py
services/assistant_orchestrator/tests/websearch_benchmark/: __init__.py  conftest.py  corpus.jsonl  harness.py  metrics.py  test_websearch_benchmark.py
services/cleaner/: __init__.py  pyproject.toml
services/cleaner/guest/: __init__.py  parser_service.py
services/cleaner/src/: __init__.py  extraction.py  image_refs.py  normalize.py  pipeline.py  sanitize.py
services/cleaner/tests/: __init__.py  perf_capture.py  test_clean_from_guest_parse.py  test_clean_html_corpus.py  test_clean_text.py  test_guest_parser_service.py  test_image_refs.py  test_image_refs_review_fixes.py
services/cleaner/tests/fixtures/: blog_code.html  comments_section.html  injection_attack.html  listicle_recipes.html  news_quantum.html  paywall_teaser.html  unicode_culture.html
services/policy_agent/: Dockerfile  pyproject.toml
services/policy_agent/config/: acl_matrix.toml  default.toml  deny_list.toml  guest_runtime.toml
services/policy_agent/src/: __init__.py  adjudicator.py  boot.py  car.py  config_loader.py  constants.py  entrypoint.py  gpu_inference.py  ipc.py  jwt_minter.py  rule_engine.py
services/policy_agent/tests/: __init__.py  test_adjudicator.py  test_boot.py  test_car.py  test_cascade_stub_harness.py  test_config_loader.py  test_constants_pa.py  test_draft_integrity_standalone.py  test_entrypoint.py  test_entrypoint_signal_handlers.py  test_gpu_inference.py  test_hybrid_adjudicator.py  test_integration_car_pipeline.py  test_ipc.py  test_jwt_minter.py  test_rate_and_resource_rules.py  test_rule_engine.py
services/semantic_router/: Dockerfile  pyproject.toml
services/semantic_router/config/: default.toml
services/semantic_router/src/: __init__.py  constants.py  intents.py  router.py
services/semantic_router/tests/: __init__.py  test_constants_sr.py  test_dual_gate_thresholds.py  test_router.py
services/ui_gateway/: pyproject.toml
services/ui_gateway/src/: __init__.py  constants.py  coord_coordinator.py  dispatch_coordinator.py  document_loader.py  generated_image_resolver.py  imagine_coordinator.py  ingest_coordinator.py  preferences_coordinator.py  session_store.py  transport.py  url_adjudicator.py
services/ui_gateway/tests/: conftest.py  test_constants_ui_gateway.py  test_coord_coordinator.py  test_coord_status_gateway.py  test_dispatch_plan.py  test_document_loader.py  test_document_loader_media.py  test_image_management_transport.py  test_image_resolve_transport.py  test_imagine_coordinator.py  test_ingest_coordinator.py  test_ingest_images.py  test_preferences_coordinator.py  test_preferences_transport.py  test_session_state_reaper.py  test_session_store.py  test_session_store_decrypt_resilience.py  test_session_store_encryption.py  test_transport.py  test_transport_documents.py  test_transport_ingest.py  test_transport_typed_guards.py  test_url_adjudicator.py
services/ui_shell/: pyproject.toml
services/ui_shell/src/: __init__.py  app.py  constants.py  escalation_prompt.py  pgov_display.py  session_panel.py  streaming.py  think_parser.py
services/ui_shell/tests/: test_app.py  test_app_ingest_command.py  test_app_load_command.py  test_app_paste_action.py  test_app_rename_command.py  test_baseline_streaming_snapshot.py  test_constants_ui_shell.py  test_escalation_prompt.py  test_pgov_display.py  test_session_panel.py  test_streaming.py  test_think_parser.py
(+2064 files in other folders)
