# BlarAI Root Pytest Configuration
# Supports running tests across all P1 services with: pytest -v

# ---------------------------------------------------------------------------
# Project metadata and dependencies
# ---------------------------------------------------------------------------
#
# TRUTH-IN-PACKAGING (#810, 12-Factor II). This list declares every
# third-party distribution the RUNTIME actually imports — the top-level
# imports of non-test code under shared/, services/, and launcher/. It is
# gate-locked by tests/security/test_dependency_truth.py: a new runtime
# import that resolves to an undeclared distribution fails the standing
# gate, so the manifest and the import graph can no longer diverge
# silently (the pre-#810 state: 2 declared vs ~18 actually imported).
#
# REPRODUCIBILITY SSOT: the runtime venv is built from the lock file
# (requirements.2026.2.1.lock.txt — the exact resolved set, updated at
# each substrate ceremony), NOT from `pip install .`. The runtime is
# `python -m launcher` from that venv; this manifest is the declaration
# of truth, the lock is the reproduction recipe.
#
# PIN STYLE: entries use lower bounds equal to the lock's resolved
# versions at declaration time (2026-07-11) — the minimum versions this
# code is proven against. Deliberately NOT exact pins: exact pins here
# would make pyproject a second pin surface competing with the lock,
# and the two would drift at every lock refresh — the same
# divergence-class this block exists to close. Exceptions below keep
# their standing deliberate range pins with recorded rationale.
#
# cryptography is declared here explicitly (Sprint 14 EA-2, ADR-025 §5.1 #3).
# It was previously a transitive-only dependency (present as 46.0.5 via other
# packages).  Making it explicit removes the fragility for security-critical
# code; a bound of >=46,<47 tracks the installed version and keeps the pin
# stable until a deliberate upgrade.  No new install is required — it is
# already present.
#
# httpx is the ONE external-network client the runtime depends on, and it is
# imported by exactly ONE module: shared/security/guarded_fetch.py, the
# Policy-Agent-gated one-door egress seam (#598 air-gap removal, ADR-027 +
# ADR-020). The import-scan control (tests/security/test_no_external_egress.py)
# enforces that single-door property. Already present in the venv (0.28.1); a
# bound of >=0.28,<0.29 tracks it. No new install required.
#
# pywin32 carries `sys_platform == 'win32'` because it exists only on
# Windows and every win32* import site is host-side code (launcher
# process hardening, named-pipe IPC, DPAPI, file DACLs); the
# guest-provisioned cleaner code (Alpine VM) never imports it.
[project]
name = "blarai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46,<47",           # field/DEK/TPM crypto, cert provisioning, JWT signing (range pin: see rationale above)
    "httpx>=0.28,<0.29",              # THE one egress door: shared/security/guarded_fetch.py ONLY (range pin: see rationale above)
    "kokoro-onnx>=0.5.0",             # TTS voice engine (services/voice)
    "numpy>=2.2.6",                   # embeddings substrate, image/audio buffers
    "onnxruntime>=1.24.2",            # bge-small embedding inference (semantic_router, AO pgov)
    "openvino>=2026.2.1",             # GPU device/property layer (vlm, image_gen, pgov)
    "openvino-genai>=2026.2.1.0",     # LLM/VLM/image-gen pipelines on the Arc 140V (ADR-011/012)
    "pillow>=12.1.1",                 # image decode/resize (UC-003/UC-010, vlm, image_gen)
    "psutil>=7.2.2",                  # process supervision (procspawn, instance lock, fleet swap ops)
    "pydantic>=2.12.5",               # CAR schema validation (shared/schemas/car.py)
    "PyJWT>=2.11.0",                  # session-token mint/validate (jwt_minter, jwt_validator)
    "pypdf>=6.12.2",                  # PDF ingestion (ui_gateway document_loader, UC-002)
    "pyperclip>=1.11.0",              # TUI clipboard copy (ui_shell; import fail-soft, feature-optional)
    "pywin32>=311; sys_platform == 'win32'",  # named-pipe IPC, DPAPI, DACLs, launcher privilege hardening
    "rich>=14.3.3",                   # TUI rendering primitives (ui_shell)
    "textual>=8.0.0",                 # TUI framework (ADR-009, ui_shell)
    "trafilatura>=2.1.0",             # HTML extraction ONLY — fetch layer forbidden (ADR-030 §4 lock)
    "transformers>=5.0.0",            # tokenizers for embeddings/pgov (semantic_router, AO)
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
    "shared/tests",
    "services/policy_agent/tests",
    "services/assistant_orchestrator/tests",
    "services/semantic_router/tests",
    "services/ui_gateway/tests",
    "services/ui_shell/tests",
    "launcher/tests",
    "tests/integration",
    "tests/security",
    "tests/harness",
    "tests/pa_quality_benchmark",
    "tests/substrate_benchmark",
    "tools/perf_contrib/tests",
]
addopts = "--strict-markers -v --import-mode=importlib -m 'not slow and not hardware and not winui'"
markers = [
    "asyncio: mark a test as an asyncio coroutine",
    "slow: real-hardware (TPM) or real-socket-timeout tests, deselected by default (run with pytest -m slow)",
    "hardware: requires real OpenVINO models on the GPU/CPU; deselected by default (run with pytest -m hardware tests/harness)",
    "winui: drives the real WinUI window via UI Automation (needs a free display + built exe + BlarAI closed); deselected by default (run with pytest -m winui tests/harness)",
    "real_vm: legitimately exercises the REAL Hyper-V VM boundary (launcher.vm_manager._run_ps) — opts out of the root-conftest #817 tripwire; supervised/hardware tiers only",
]
asyncio_mode = "auto"
