[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "blarai-policy-agent"
version = "0.1.0"
description = "Policy Agent — Action Authorization Boundary (USE-CASE-001)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3",
    "openvino>=2026.2,<2027",
    "openvino-genai>=2026.2,<2027",
    "tomli>=2.0,<3;python_version<'3.12'",
    # JWT minting — security boundary: upper-bound to contain silent breaking API changes
    "PyJWT>=2.8,<3",
    # cryptography — security-critical; upper-bound tracks installed 46.x; upgrade is deliberate
    "cryptography>=46,<47",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v -m 'not slow'"
markers = [
    "slow: real-hardware (TPM) or socket-timeout tests, deselected by default (run with -m slow)",
]
