[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "blarai-semantic-router"
version = "0.1.0"
description = "Semantic Router — CPU-Based Intent Classifier (USE-CASE-004)"
requires-python = ">=3.11"
dependencies = [
    # onnxruntime parses binary model formats — supply-chain security boundary
    "onnxruntime>=1.16,<2",
    "tomli>=2.0,<3;python_version<'3.12'",
    "numpy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
