[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "blarai-ui-shell"
version = "0.1.0"
description = "TUI Shell — Textual Chat Interface (P1.12, ADR-009)"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.89,<9",
    "tomli>=2.0,<3;python_version<'3.12'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "pytest-textual-snapshot>=1.0",
    "ruff>=0.1",
    "mypy>=1.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.mypy]
strict = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
